--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,9 @@
               <a href="./index.html" class="site-nav link">Studio</a>
             </li>
             <li class="site-link">
-              <a href="./portfolio.html" class="site-nav link">Portfolio</a>
+              <a href="./portfolio.html" class="site-nav link nav-current"
+                >Portfolio</a
+              >
             </li>
             <li class="site-link">
               <a href="" class="site-nav link">Contacts</a>
@@ -89,11 +91,20 @@
           <ul class="list applications">
             <li class="app-list">
               <a href="" class="link app-link">
-                <img
-                  src="./images/portfolio/oa-banking-app-interface-concept.jpg"
-                  alt="Banking App Interface Concept"
-                  class="img-block"
-                />
+                <div class="app-overlay">
+                  <img
+                    src="./images/portfolio/oa-banking-app-interface-concept.jpg"
+                    alt="Banking App Interface Concept"
+                    class="img-block"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-cont">
                   <h2 class="app-title">Banking App Interface Concept</h2>
                   <p class="app-text">App</p>
@@ -102,11 +113,20 @@
             </li>
             <li class="app-list">
               <a href="" class="link app-link">
-                <img
-                  src="./images/portfolio/oa-cashless-payment.jpg"
-                  alt="Cashless Payment"
-                  class="img-block"
-                />
+                <div class="app-overlay">
+                  <img
+                    src="./images/portfolio/oa-cashless-payment.jpg"
+                    alt="Cashless Payment"
+                    class="img-block"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-cont">
                   <h2 class="app-title">Cashless Payment</h2>
                   <p class="app-text">Marketing</p>
@@ -115,11 +135,20 @@
             </li>
             <li class="app-list">
               <a href="" class="link app-link">
-                <img
-                  src="./images/portfolio/oa-meditation-app.jpg"
-                  alt="Meditation App"
-                  class="img-block"
-                />
+                <div class="app-overlay">
+                  <img
+                    src="./images/portfolio/oa-meditation-app.jpg"
+                    alt="Meditation App"
+                    class="img-block"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-cont">
                   <h2 class="app-title">Meditation App</h2>
                   <p class="app-text">App</p>
@@ -128,11 +157,20 @@
             </li>
             <li class="app-list">
               <a href="" class="link app-link">
-                <img
-                  src="./images/portfolio/oa-taxi-service.jpg"
-                  alt="Taxi Service"
-                  class="img-block"
-                />
+                <div class="app-overlay">
+                  <img
+                    src="./images/portfolio/oa-taxi-service.jpg"
+                    alt="Taxi Service"
+                    class="img-block"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-cont">
                   <h2 class="app-title">Taxi Service</h2>
                   <p class="app-text">Marketing</p>
@@ -141,11 +179,20 @@
             </li>
             <li class="app-list">
               <a href="" class="link app-link">
-                <img
-                  src="./images/portfolio/oa-screen-illustrations.jpg"
-                  alt="Screen Illustrations"
-                  class="img-block"
-                />
+                <div class="app-overlay">
+                  <img
+                    src="./images/portfolio/oa-screen-illustrations.jpg"
+                    alt="Screen Illustrations"
+                    class="img-block"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-cont">
                   <h2 class="app-title">Screen Illustrations</h2>
                   <p class="app-text">Design</p>
@@ -154,11 +201,20 @@
             </li>
             <li class="app-list">
               <a href="" class="link app-link">
-                <img
-                  src="./images/portfolio/oa-online-courses.jpg"
-                  alt="Online Courses"
-                  class="img-block"
-                />
+                <div class="app-overlay">
+                  <img
+                    src="./images/portfolio/oa-online-courses.jpg"
+                    alt="Online Courses"
+                    class="img-block"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-cont">
                   <h2 class="app-title">Online Courses</h2>
                   <p class="app-text">Marketing</p>
@@ -167,11 +223,20 @@
             </li>
             <li class="app-list">
               <a href="" class="link app-link">
-                <img
-                  src="./images/portfolio/oa-instagram-stories-concept.jpg"
-                  alt="Instagram Stories Concept"
-                  class="img-block"
-                />
+                <div class="app-overlay">
+                  <img
+                    src="./images/portfolio/oa-instagram-stories-concept.jpg"
+                    alt="Instagram Stories Concept"
+                    class="img-block"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-cont">
                   <h2 class="app-title">Instagram Stories Concept</h2>
                   <p class="app-text">Design</p>
@@ -180,11 +245,20 @@
             </li>
             <li class="app-list">
               <a href="" class="link app-link">
-                <img
-                  src="./images/portfolio/oa-organic-food.jpg"
-                  alt="Organic Food"
-                  class="img-block"
-                />
+                <div class="app-overlay">
+                  <img
+                    src="./images/portfolio/oa-organic-food.jpg"
+                    alt="Organic Food"
+                    class="img-block"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-cont">
                   <h2 class="app-title">Organic Food</h2>
                   <p class="app-text">Web Site</p>
@@ -193,11 +267,20 @@
             </li>
             <li class="app-list">
               <a href="" class="link app-link">
-                <img
-                  src="./images/portfolio/oa-fresh-coffee.jpg"
-                  alt="Fresh Coffee"
-                  class="img-block"
-                />
+                <div class="app-overlay">
+                  <img
+                    src="./images/portfolio/oa-fresh-coffee.jpg"
+                    alt="Fresh Coffee"
+                    class="img-block"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-cont">
                   <h2 class="app-title">Fresh Coffee</h2>
                   <p class="app-text">Web Site</p>
